--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
-    <string name="app_name">Artifacts</string>
+    <string name="app_name" translatable="false">Artifacts</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
+    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="game_2_title">Choose paint</string>
+    <string name="game_0_title">Choose artist</string>
+    <string name="game_1_title">Type artist</string>
+    <string name="game_3_title">Choose movement</string>
 </resources>
