--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -12,4 +12,13 @@
     <string name="finish_dialog_message" >Вы угадали %1$d из %2$d</string>
     <string name="finish">Закончить</string>
     <string name="try_more">Ещё!</string>
+    <string name="statistics">Статистика</string>
+    <string name="preference">Настройки</string>
+    <string name="tools">Tools</string>
+    <string name="levels">Уровни</string>
+    <string name="level_1_text">Любитель</string>
+    <string name="level_2_text">Эксперт</string>
+    <string name="level_0_text">Начинающий</string>
+    <string name="select_level_dialog_title">Измените уровень</string>
+    <string name="statistics_title">Статистика</string>
 </resources>
