--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,13 @@
     <string name="try_more">Try more!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="statistics">Statistics</string>
+    <string name="preference">Preference</string>
+    <string name="tools">Tools</string>
+    <string name="levels">Levels</string>
+    <string name="level_1_text">Amateur</string>
+    <string name="level_2_text">Expert</string>
+    <string name="level_0_text">Beginner</string>
+    <string name="select_level_dialog_title">Select level</string>
+    <string name="statistics_title">Statistic</string>
 </resources>
