--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,4 +21,7 @@
     <string name="level_0_text">Начинающий</string>
     <string name="select_level_dialog_title">Измените уровень</string>
     <string name="statistics_title">Статистика</string>
+    <string name="gallery">Галерея</string>
+    <string name="authors_count">%1$d Художников</string>
+    <string name="picture_level_text">Уровень %1$d</string>
 </resources>
