--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,4 +24,5 @@
     <string name="gallery">Галерея</string>
     <string name="authors_count">%1$d Художников</string>
     <string name="picture_level_text">Уровень %1$d</string>
+    <string name="movements_count" >Направлений по уровням: 1:%1$d, 2:%2$d, 3:%3$d</string>
 </resources>
