--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,4 +27,5 @@
     <string name="movements_count" >Картин по уровням: 1:%1$d, 2:%2$d, 3:%3$d</string>
     <string name="pic_by_level_count">Картин по уровням %1$d, %2$d, %3$d</string>
     <string name="undefined_movements_name">Без направления</string>
+    <string name="author_name_hint">Введите имя художника</string>
 </resources>
