--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="movements_count" >Pictures by level 1:%1$d, 2:%2$d, 3:%3$d</string>
     <string name="pic_by_level_count">Pics by level %1$d, %2$d, %3$d</string>
     <string name="undefined_movements_name">Without</string>
+    <string name="author_name_hint">Type author name</string>
 </resources>
