--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="level_2_text">Expert</string>
     <string name="level_0_text">Beginner</string>
     <string name="select_level_dialog_title">Select level</string>
-    <string name="statistics_title">Statistic</string>
+    <string name="statistics_title">Statistic for level %1$s</string>
     <string name="gallery">Gallery</string>
     <string name="authors_count">%1$d Artists</string>
     <string name="picture_level_text">Level %1$d</string>
@@ -32,4 +32,5 @@
     <string name="author_name_hint">Type author name</string>
     <string name="internet_dialog_title">Internet connection</string>
     <string name="internet_dialog_message">Sorry, we need internet access to start app</string>
+    <string name="game_finished_dialog_title">Well done!</string>
 </resources>
