changed icons in sidebar, add About item

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -35,4 +35,5 @@
     <string name="game_finished_dialog_title_low">Старайтесь еще!</string>
     <string name="rize_level_dialog_title">Отличные результаты на уровне %1$s!</string>
     <string name="rize_level_dialog_text">Не желаете попробовать уровень %1$s?</string>
+    <string name="about">О приложении</string>
 </resources>
