--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -37,4 +37,5 @@
     <string name="rize_level_dialog_text">Не желаете попробовать уровень %1$s?</string>
     <string name="about">О приложении</string>
     <string name="favorites">Избранное</string>
+    <string name="history_title">История</string>
 </resources>
