add detecting new authors in the loaded base for toast

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -41,4 +41,5 @@
     <string name="you_hit_from">\u0020из\u0020</string>
     <string name="you_hit">Вы угадали\u0020</string>
     <string name="favorites_empty_msg">Здесь будут отображаться последние 30 картин, которые вы видели в конкурсах</string>
+    <string name="toast_miss_msg">Мы скучали без Вас! И добавили новых художников, среди которых</string>
 </resources>
