--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="you_hit">You hit\u0020</string>
     <string name="favorites_empty_msg">There you can find your 30 last viewed pictures</string>
     <string name="toast_miss_msg">We miss you! And added new authors, among with</string>
+    <string name="gallery_title">Gallery</string>
 </resources>
